--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,17 @@ services:
     ports:
       - "8010:8010"
     volumes:
-      - ./backend:/workspace
-    command: uvicorn main:app --host 0.0.0.0 --port 8010 --reload
+      - .:/workspace
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8010 --reload
     working_dir: /workspace/backend
-  
+
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-    - "8080:8080"
+      - "8080:8080"
     volumes:
-    - ./frontend:/workspace
+      - ./frontend:/workspace/frontend
     command: python main.py
     working_dir: /workspace/frontend
