--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,9 @@ uvicorn
 langgraph
 openai
 python-dotenv
+black>=25.1.0
+isort>=6.0.1
+langchain-mcp-adapters>=0.1.1
+langchain[openai]>=0.3.25
+    
+    
